--- a/secontactform/include/contactform.css
+++ b/secontactform/include/contactform.css
@@ -1,5 +1,34 @@
 /*-----------------------------------------*/
 
+.list01{
+	width: 100%;
+	height:100%;
+	padding-bottom: 5px;
+	overflow: hidden;
+	padding-top: 5px;
+}
+	
+.list01-left{
+	float:left;
+	width:30%;
+	height:100%;
+	line-height: 30px !important;
+	vertical-align: top;
+	font-family: verdana, arial, sans-serif;
+	text-align: right;
+	color:#707070;
+}
+	
+.list01-right{
+	float:right;
+	width:65%;
+	height:100%;
+	font-size: 12px;
+	font-family: verdana,arial,sans-serif;
+	text-align: left;
+	margin-left: 5%;
+}
+	
 table.gridtablesmall {
 	font-family: verdana,arial,sans-serif;
 	font-size:11px;
