-Changed country field from text field to select field -A default list of countries are preloaded -Added option to define own list of countries
git-svn-id: https://plugins.svn.wordpress.org/secontactform/trunk@569945 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/secontactform/include/contactform.css
+++ b/secontactform/include/contactform.css
@@ -122,6 +122,17 @@ fieldset.bmostyle input {
 	-moz-border-radius:0.4em;
 	-khtml-border-radius:0.4em;
 }
+
+fieldset.bmostyle select {
+	padding:0.15em;
+	width:12em;
+	border:1px solid #ddd;
+	background:#fafafa;
+	font:bold 1.0em arial, sans-serif;
+	-moz-border-radius:0.4em;
+	-khtml-border-radius:0.4em;
+}
+
 fieldset.bmostyle div input[type=button]{
 	padding:0.15em;
 	height:21px;
