--- a/include/contactform.css
+++ b/include/contactform.css
@@ -36,7 +36,7 @@ table.gridtablesmall {
 	border-width: 1px;
 	border-color: #666666;
 	border-collapse: collapse;
-    width:100%;
+	width:100%;
 }
 table.gridtablesmall th {
 	border-width: 1px;
@@ -83,7 +83,7 @@ fieldset.bmostyle fieldsetContent {
 
 fieldset.bmostyle div {
 	margin:0.3em 0;
-	clear:both;
+	/*clear:both;*/
 	font:1.0em arial, sans-serif;
 
 }
