--- a/include/contactform.css
+++ b/include/contactform.css
@@ -278,8 +278,7 @@ input[type=checkbox], input[type=radio]
 
 .box-success{
 	padding-left: 32px;
-	border-top:1px solid #BBDF8D;
-	border-bottom:1px solid #BBDF8D;
+	border:1px solid #BBDF8D;
 	background:#EAF7D9 url("icons/accept.png");
 	background-repeat: no-repeat;
 	background-position: 8px 8px;
@@ -287,8 +286,7 @@ input[type=checkbox], input[type=radio]
 
 .box-error{
 	padding-left: 32px;
-	border-top:1px solid #F8ACAC;
-	border-bottom:1px solid #F8ACAC;
+	border:1px solid #F8ACAC;
 	background-color: #FFD1D1;
 	background-image: url("icons/exclamation.png");
 	background-repeat: no-repeat;
@@ -297,14 +295,12 @@ input[type=checkbox], input[type=radio]
 
 .box-info {
 	padding-left: 32px;
-	border-top:1px solid #B8E2FB;
-	border-bottom:1px solid #B8E2FB;
+	border:1px solid #B8E2FB;
 	background:#E8F6FF url("icons/information.png") no-repeat 8px 50%;
 }
 
 .box-warning{
 	padding-left: 32px;
-	border-top:1px solid #F2DD8C;
-	border-bottom:1px solid #F2DD8C;
+	border:1px solid #F2DD8C;
 	background:#FFF5CC url("icons/error.png") no-repeat 8px 50%;
 }
